p2/force-app/main/default/objects/Portfolio__c/fields/About_Me__c.field-meta.xml
<CustomField>
    <fullName>About_Me__c</fullName>
    <label>About Me</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>