p2/force-app/main/default/objects/Portfolio__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <referenceTo>Certifications__c</referenceTo>
    <relationshipLabel>Portfolios</relationshipLabel>
    <relationshipName>Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>