p2/force-app/main/default/objects/Portfolio__c/fields/Honor_and_Awards__c.field-meta.xml
<CustomField>
    <fullName>Honor_and_Awards__c</fullName>
    <label>Honor and Awards</label>
    <type>TextArea</type>
</CustomField>