p2/force-app/main/default/objects/Portfolio__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <label>Projects</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>