p2/force-app/main/default/objects/Portfolio__c/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <label>Work Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>