p2/force-app/main/default/objects/Portfolio__c/listViews/All_Portfolios.listView-meta.xml
<ListView>
    <fullName>All_Portfolios</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Portfolios</label>
</ListView>